# wechat_stream_ocr

./: .gitignore  README.md  ecosystem.config.js  package-lock.json  package.json  pyproject.toml
scripts/: common.sh  install.sh  logs.sh  messages.sh  start.sh  stop.sh
src/wechat_stream_ocr/: config.py  diff_detector.py  frame_store.py  main.py  message_filter.py  message_parser.py  models.py  ocr.py  pipeline.py  publisher_zmq.py  ws_server.py
tests/: test_end_to_end.py  test_ocr_device_selection.py
tools/: generate_fake_chat_frames.py  paddle_burst_benchmark.py  paddle_e2e_smoke.py
